...
    var body: some View {
        NavigationView {
            ScrollView {
                VStack(alignment: .leading, spacing: 20) {
                    Group {
                        DetailItemView(iconName: "building.2.fill", label: "Ciudad", value: city.name)
                        DetailItemView(iconName: "flag.fill", label: "País", value: city.country) //
                        DetailItemView(iconName: "number.circle.fill", label: "ID", value: "\(city.id)")
                        DetailItemView(iconName: "arrow.up.arrow.down.circle.fill", label: "Latitud", value: String(format: "%.6f", city.coord.lat))
                        DetailItemView(iconName: "arrow.left.arrow.right.circle.fill", label: "Longitud", value: String(format: "%.6f", city.coord.lon))
                    }
                    .padding(.horizontal)
                    VStack(alignment: .leading) {
...
